// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders DataCollection with full output 1`] = `
<div>
  <div
    className="collection"
  >
    <ListensItemMini
      albumLink="test-albumLink-one"
      albumName="test-albumName-one"
      artist="test-artist-one"
      playcount={1}
      thumbnail="test-thumbnail-one"
    />
    <ListensItemMini
      albumLink="test-albumLink-two"
      albumName="test-albumName-two"
      artist="test-artist-two"
      playcount={2}
      thumbnail="test-thumbnail-two"
    />
  </div>
</div>
`;

exports[`renders DataCollection with reduced output 1`] = `
<div>
  <div
    className="collection"
  >
    <ListensItemFull
      albumLink="test-albumLink-one"
      albumName="test-albumName-one"
      artist="test-artist-one"
      playcount={1}
      thumbnail="test-thumbnail-one"
    />
  </div>
</div>
`;

exports[`renders DataCollection with reduced output using custom sorter 1`] = `
<div>
  <div
    className="collection"
  >
    <ListensItemFull
      albumLink="test-albumLink-two"
      albumName="test-albumName-two"
      artist="test-artist-two"
      playcount={2}
      thumbnail="test-thumbnail-two"
    />
    <ListensItemFull
      albumLink="test-albumLink-one"
      albumName="test-albumName-one"
      artist="test-artist-one"
      playcount={1}
      thumbnail="test-thumbnail-one"
    />
  </div>
</div>
`;
